Moved to newer FastMCP packages Added different transport types like stdio (like bevore), http and sse Added options for transport-type and mcp_port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - OPENHAB_API_TOKEN=${OPENHAB_API_TOKEN:-}
       - OPENHAB_USERNAME=${OPENHAB_USERNAME:-}
       - OPENHAB_PASSWORD=${OPENHAB_PASSWORD:-}
+      - TRANSPORT_TYPE=${TRANSPORT_TYPE:-}
+      - MCP_PORT=${MCP_PORT:-}
       - PORT=8081
     depends_on:
       openhab:
