--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,7 +44,9 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v5
-        with:
+                labels: ${{ steps.meta.outputs.labels }}
+                cache-from: type=gha
+                cache-to: type=gha,mode=max
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
